--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    position: relative;
+    height: 100%;
+    display: grid;
+    grid-template-areas:
+    "header"
+    "body";
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 100%;
+    /*background: url("/img/cover_talkinghead.gif") 0% 0% / cover;*/
+    background: var(--color-bg-main) 0% 0% / cover;
+    transition: background 0.25s ease;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    grid-area: header;
+    z-index: 3;
 }
 
-.App-link {
-  color: #61dafb;
+.App-body {
+    z-index: 2;
+    grid-area: body;
+    overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    pointer-events:none;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
