--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,9 @@
     display: grid;
     grid-template-areas:
     "header"
-    "body";
-    grid-template-rows: 60px 1fr;
+    "body"
+    "social";
+    grid-template-rows: 60px 1fr 31px;
     grid-template-columns: 100%;
     /*background: url("/img/cover_talkinghead.gif") 0% 0% / cover;*/
     background: var(--color-bg-main) 0% 0% / cover;
@@ -21,6 +22,27 @@
     z-index: 2;
     grid-area: body;
     overflow: hidden;
+}
+
+.App-social {
+    background-color: var(--color-text-secondary);
+    justify-self: end;
+    align-self: center;
+    z-index: 3;
+    margin-left: 20px;
+    margin-right: 20px;
+    grid-area: social;
+    overflow: hidden;
+    font-size: 1.5rem;
+    padding-left: 40px;
+}
+
+.App-social i {
+    margin-right: 40px;
+}
+
+.App-social a {
+    color: var(--color-accent);
 }
 
 .App-video {
