--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,10 @@
     height: 100%;
     display: grid;
     grid-template-areas:
-    "header"
-    "body"
-    "social";
-    grid-template-rows: 60px 1fr 31px;
-    grid-template-columns: 100%;
-    /*background: url("/img/cover_talkinghead.gif") 0% 0% / cover;*/
+    "social header"
+    "body body";
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 200px 1fr;
     background: var(--color-bg-main) 0% 0% / cover;
     transition: background 0.25s ease;
 }
@@ -25,24 +23,24 @@
 }
 
 .App-social {
-    background-color: var(--color-accent);
-    justify-self: end;
+    justify-self: start;
     align-self: center;
     z-index: 3;
-    margin-left: 20px;
-    margin-right: 20px;
     grid-area: social;
     overflow: hidden;
     font-size: 1.5rem;
-    padding-left: 40px;
+    padding-left: 20px;
 }
 
 .App-social i {
-    margin-right: 40px;
 }
 
 .App-social a {
     color: var(--color-text-secondary);
+    background-color: var(--color-accent);
+    margin-right: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .App-video {
@@ -56,4 +54,25 @@
     z-index: 1;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 500px) {
+    .App {
+        grid-template-areas:
+                "header"
+                "body"
+                "social";
+        grid-template-rows: 60px 1fr 39px;
+        grid-template-columns: 1fr;
+    }
+
+    .App-social {
+        justify-self: end;
+        padding-right: 20px;
+    }
+
+    .App-social a {
+        margin-right: 0;
+        margin-left: 8px;
+    }
 }
